refactor: update TravelSurvey API URIs and update Swagger documentation (#22)
* refactor: update travel survey api uri

* docs: document travel survey api
