# src/main/java/com/butingbe/domain/travelsurvey/controller/TravelSurveyController.java
@@ -16,7 +16,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-@RequestMapping("/users/me/profile")
+@RequestMapping("/travel-surveys")
 @RequiredArgsConstructor
 public class TravelSurveyController {
 
